<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cs_right_view"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cs_left_opera"
        android:layout_width="@dimen/fm_dp_354"
        android:layout_height="match_parent"
        android:background="@drawable/fm_shape_bg_rgiht_menu"
        app:layout_constraintRight_toLeftOf="@+id/ll_right_opera"
        app:layout_constraintRight_toRightOf="parent">

        <View
            android:id="@+id/view_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#1AFFFFFF"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckedTextView
            android:id="@+id/view_view_textview_with_line"
            android:layout_width="30dp"
            android:layout_height="10dp"
            android:background="@drawable/selector_movie_rb_incator2"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/tv_also_add_desc"
            app:layout_constraintLeft_toLeftOf="@+id/tv_also_add_desc" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_also_add_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fm_dp_25"
            android:layout_marginTop="@dimen/fm_dp_15"
            android:text="已点  0"
            android:fontFamily="@font/yc_font"
            android:textColor="#ffffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/at_disrupt_paixu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20.5dp"
            android:fontFamily="@font/yc_font"
            android:drawableLeft="@mipmap/menu_disruption_sound_btn"
            android:drawablePadding="2dp"
            android:padding="@dimen/fm_dp_10"
            android:text="乱序"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_10"
            app:layout_constraintBottom_toBottomOf="@+id/tv_also_add_desc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_also_add_desc" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/at_clear_also_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fm_dp_25"
            android:drawableLeft="@mipmap/menu_clear_sound_btn"
            android:drawablePadding="2dp"
            android:padding="@dimen/fm_dp_10"
            android:text="清空"
            android:fontFamily="@font/yc_font"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_10"
            app:layout_constraintBottom_toBottomOf="@+id/tv_also_add_desc"
            app:layout_constraintRight_toLeftOf="@+id/at_disrupt_paixu"
            app:layout_constraintTop_toTopOf="@+id/tv_also_add_desc" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hot_recycleview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/fm_dp_5"
            android:layout_marginBottom="@dimen/fm_dp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="@+id/tv_also_add_desc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_view_textview_with_line"
            tools:itemCount="10"
            tools:listitem="@layout/adapter_menu_also_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--   android:background="@color/fm_80FFFFFF"-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cs_sound_layout"
        android:layout_width="@dimen/fm_dp_174"
        android:layout_height="@dimen/fm_dp_78"
        android:clickable="true"
        android:visibility="gone"
        android:background="@drawable/fm_shape_bg_rgiht_menu"
        app:layout_constraintRight_toLeftOf="@+id/btn_sound"
        app:layout_constraintTop_toTopOf="@+id/btn_sound"
        app:layout_constraintBottom_toBottomOf="@+id/btn_sound">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_sound_pluse"
            android:layout_width="@dimen/fm_dp_53"
            android:layout_height="@dimen/fm_dp_58"
            android:drawableTop="@mipmap/ic_play_sound_plus"
            android:drawablePadding="2dp"
            android:fontFamily="@font/yc_font"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/fm_dp_10"
            android:text="@string/main_voice_plus_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_12"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_sound_minus"
            android:layout_width="@dimen/fm_dp_53"
            android:layout_height="@dimen/fm_dp_58"
            android:drawableTop="@mipmap/ic_play_sound_minus"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/fm_dp_10"
            android:text="@string/main_voice_minus_txt"
            android:fontFamily="@font/yc_font"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_12"
            app:layout_constraintRight_toLeftOf="@+id/btn_sound_pluse"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_sound_fibit"
            android:layout_width="@dimen/fm_dp_53"
            android:layout_height="@dimen/fm_dp_58"
            android:drawableTop="@drawable/selector_play_jy"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/fm_dp_10"
            android:text="静音"
            android:fontFamily="@font/yc_font"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_12"
            app:layout_constraintRight_toLeftOf="@+id/btn_sound_minus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/ll_right_opera"
        android:layout_width="@dimen/fm_dp_63"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="#CC000000"
        app:layout_constraintRight_toRightOf="parent"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_open"
            android:layout_width="@dimen/fm_dp_63"
            android:layout_height="@dimen/fm_dp_53"
            android:background="@drawable/fm_shape_rectangle_ffe056ff"
            android:drawableTop="@drawable/selector_bg_playe_menu_close1"
            android:gravity="center"
            android:paddingTop="7.5dp"
            android:text="已点"
            android:fontFamily="@font/yc_font"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_12"
            app:layout_constraintEnd_toEndOf="@+id/ll_right_opera"
            app:layout_constraintStart_toStartOf="@+id/ll_right_opera"
            app:layout_constraintTop_toTopOf="@+id/ll_right_opera" />

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/fm_dp_63"
            android:layout_height="2dp"
            android:background="@drawable/fm_shape_line_0fffff_3dfffff_0fffff"
            app:layout_constraintEnd_toEndOf="@+id/ll_right_opera"
            app:layout_constraintStart_toStartOf="@+id/ll_right_opera"
            app:layout_constraintTop_toBottomOf="@+id/tv_open" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_tv_open"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="tv_open,line" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_search_song"
            android:layout_width="@dimen/fm_dp_63"
            android:layout_height="@dimen/fm_dp_58"
            android:background="@drawable/fm_shape_rectangle_ffe056ff"
            android:drawableTop="@mipmap/img_menu_search_btn"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:fontFamily="@font/yc_font"
            android:paddingBottom="@dimen/fm_dp_10"
            android:text="@string/menu_quick_search_song"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_12"
            app:layout_constraintEnd_toEndOf="@+id/ll_right_opera"
            app:layout_constraintStart_toStartOf="@+id/ll_right_opera"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_yc"
            android:layout_width="@dimen/fm_dp_63"
            android:layout_height="@dimen/fm_dp_58"
            android:drawableTop="@mipmap/ic_play_bz"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/fm_dp_10"
            android:text="@string/main_banzhou"
            android:fontFamily="@font/yc_font"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_12"
            app:layout_constraintEnd_toEndOf="@+id/ll_right_opera"
            app:layout_constraintStart_toStartOf="@+id/ll_right_opera"
            app:layout_constraintTop_toBottomOf="@+id/btn_search_song" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_qg"
            android:layout_width="@dimen/fm_dp_63"
            android:layout_height="@dimen/fm_dp_58"
            android:drawableTop="@mipmap/ic_play_qg"
            android:drawablePadding="@dimen/fm_dp_2"
            android:gravity="center"
            android:paddingTop="@dimen/fm_dp_10"
            android:paddingBottom="@dimen/fm_dp_10"
            android:text="@string/main_cut_song_txt"
            android:fontFamily="@font/yc_font"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_12"
            app:layout_constraintEnd_toEndOf="@+id/ll_right_opera"
            app:layout_constraintStart_toStartOf="@+id/ll_right_opera"
            app:layout_constraintTop_toBottomOf="@+id/btn_yc" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_zt"
            android:layout_width="@dimen/fm_dp_63"
            android:layout_height="@dimen/fm_dp_58"
            android:layout_marginTop="@dimen/fm_dp_5"
            android:drawableTop="@mipmap/ic_play_zt"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/fm_dp_10"
            android:text="@string/main_pause_txt"
            android:fontFamily="@font/yc_font"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_12"
            app:layout_constraintEnd_toEndOf="@+id/ll_right_opera"
            app:layout_constraintStart_toStartOf="@+id/ll_right_opera"
            app:layout_constraintTop_toBottomOf="@+id/btn_qg" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cc"
            android:layout_width="@dimen/fm_dp_63"
            android:layout_height="@dimen/fm_dp_58"
            android:drawableTop="@mipmap/ic_play_cc"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/fm_dp_10"
            android:text="@string/main_ensemble_txt"
            android:fontFamily="@font/yc_font"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_12"
            app:layout_constraintEnd_toEndOf="@+id/ll_right_opera"
            app:layout_constraintStart_toStartOf="@+id/ll_right_opera"
            app:layout_constraintTop_toBottomOf="@+id/btn_zt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_sound"
            android:layout_width="@dimen/fm_dp_63"
            android:layout_height="@dimen/fm_dp_58"
            android:drawableTop="@mipmap/img_menu_sound_btn"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:background="@drawable/fm_shape_rectangle_ffe056ff"
            android:paddingBottom="@dimen/fm_dp_10"
            android:text="@string/menu_voice_sound_txt"
            android:fontFamily="@font/yc_font"
            android:textColor="@color/white"
            android:textSize="@dimen/fm_text_size_12"
            app:layout_constraintEnd_toEndOf="@+id/ll_right_opera"
            app:layout_constraintStart_toStartOf="@+id/ll_right_opera"
            app:layout_constraintTop_toBottomOf="@+id/btn_cc" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_small_sound_pluse"
        android:layout_width="@dimen/fm_dp_63"
        android:layout_height="@dimen/fm_dp_58"
        android:drawableTop="@mipmap/ic_play_sound_plus"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/fm_dp_10"
        android:text="@string/main_voice_plus_txt"
        android:fontFamily="@font/yc_font"
        android:textColor="@color/white"
        android:textSize="@dimen/fm_text_size_12"
        app:layout_constraintEnd_toEndOf="@+id/ll_right_opera"
        app:layout_constraintStart_toStartOf="@+id/ll_right_opera"
        app:layout_constraintTop_toBottomOf="@+id/btn_cc"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_bog_sound_minus"
        android:layout_width="@dimen/fm_dp_63"
        android:layout_height="@dimen/fm_dp_58"
        android:drawableTop="@mipmap/ic_play_sound_minus"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/fm_dp_10"
        android:text="@string/main_voice_minus_txt"
        android:fontFamily="@font/yc_font"
        android:textColor="@color/white"
        android:textSize="@dimen/fm_text_size_12"
        app:layout_constraintRight_toLeftOf="@+id/btn_small_sound_pluse"
        app:layout_constraintEnd_toEndOf="@+id/ll_right_opera"
        app:layout_constraintStart_toStartOf="@+id/ll_right_opera"
        app:layout_constraintTop_toBottomOf="@+id/btn_small_sound_pluse" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_min_screen_sound"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="btn_small_sound_pluse,btn_bog_sound_minus" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/at_video_logotout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/fm_dp_8.5"
        android:layout_marginTop="@dimen/fm_dp_8.5"
        android:background="@mipmap/img_logot_out"
        android:clickable="true"
        android:focusable="true"
        android:text="退出全屏"
        android:fontFamily="@font/yc_font"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/fm_dp_40.5"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_seek"
        android:layout_width="0dp"
        android:layout_height="@dimen/fm_dp_40"
        android:layout_marginStart="@dimen/fm_dp_15"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/movie_shape_controller_bottom_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/fm_dp_10"
        android:paddingEnd="@dimen/fm_dp_10"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cs_left_opera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginEnd="@dimen/fm_dp_10">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/curr_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00:00"
            android:fontFamily="@font/yc_font"
            android:textColor="#CCFFFFFF"
            android:textSize="12sp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:max="1000"
            android:maxHeight="5dp"
            android:minHeight="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:progressDrawable="@drawable/moive_layer_progress_bar"
            android:splitTrack="false"
            android:thumb="@mipmap/ic_moive_seek_thumb"
            tools:progress="80" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00:00"
            android:fontFamily="@font/yc_font"
            android:textColor="#CCFFFFFF"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>